[tool.poetry]
name = "bengal-images"
version = "0.3.0"
description = "Bengal images"
authors = ["j-lin <j-lin@gmofh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
beautifulsoup4 = "^4.12.3"
bokeh = "^3.6.0"
bottleneck = "^1.4.0"
cryptography = "^43.0.1"
oracledb = "^2.4.1"
dask = "^2024.9.0"
decorator = "^5.1.1"
dtreeviz = "^2.2.2"
graphviz = "^0.20.3"
img2pdf = "^0.5.1"
ipywidgets = "^8.1.5"
jdcal = "^1.4.1"
jedi = "^0.19.1"
more-itertools = "^10.5.0"
mpmath = "^1.3.0"
networkx = "^3.3"
numexpr = "^2.10.1"
olefile = "^0.47"
openpyxl = "^3.1.5"
orange3 = "^3.37.0"
patsy = "^0.5.6"
pymc = "^5.16.2"
pypdf2 = "^3.0.1"
scikit-image = "^0.24.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.3"
sympy = "^1.13.3"
ta-lib = "^0.4.32"
tensorboard = "^2.18.0"
tensorboard-plugin-wit = "^1.8.1"
unicodecsv = "^0.14.1"
xlwt = "^1.3.0"
dill = "^0.3.8"
cython = "^3.0.11"
datashape = "^0.5.2"
orange3-associate = "^1.3.0"
quantlib-python = "^1.18"
msoffcrypto-tool = "^5.4.2"
opencv-python = "^4.10.0.84"
workdays = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
