[tool.poetry]
name = "bengal-images"
version = "0.3.0"
description = "Bengal images"
authors = ["j-lin <j-lin@gmofh.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.12"
cryptography = "^43.0.1"
datashape = "^0.5.2"
decorator = "^5.1.1"
dtreeviz = "^2.2.2"
graphviz = "^0.20.3"
img2pdf = "^0.5.1"
jdcal = "^1.4.1"
jedi = "^0.19.1"
more-itertools = "^10.5.0"
mpmath = "^1.3.0"
msoffcrypto-tool = "^5.4.2"
networkx = "^3.3"
numexpr = "^2.10.1"
olefile = "^0.47"
opencv-python = "^4.10.0.84"
openpyxl = "^3.1.5"
oracledb = "^2.4.1"
orange3 = "^3.37.0"
orange3-associate = "^1.3.0"
pymc = "^5.16.2"
pypdf2 = "^3.0.1"
quantlib-python = "^1.18"
sympy = "^1.13.3"
unicodecsv = "^0.14.1"
workdays = "^1.4"
xlwt = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
